testdata/baselines/reference/compiler/tluaTableDestructuringCoexistence.errors.txt
tluaTableDestructuringCoexistence.tlua(6,2): error TLUA2364: The left-hand side of an assignment expression must be a variable or a property access.


==== tluaTableDestructuringCoexistence.tlua (1 errors) ====
    // Destructuring assignment is deleted: `x = 1` inside braces has exactly one
    // meaning (a Lua keyed field), and a table literal on the left of `=` is an
    // ordinary assignment target that fails the reference check.
    declare obj: { x?: number; q?: number };
    local xv: number | nil;
    ({ q = 7 } = obj);
     ~~~~~~~~~
!!! error TLUA2364: The left-hand side of an assignment expression must be a variable or a property access.
    local sums = {xv};
    
    // Lua multiple assignment is the extraction idiom.
    declare src: { m: number; n: string };
    local m, n = src.m, src.n;
    local mn = {m, n};
    
    // A table with keyed fields is still just a table wherever it appears, and
    // the old `[k]:`/`name:` target spellings are parse errors.
    declare obj3: { k: boolean };
    local z = ({ ["k"] = true }).k;
    local zz = z;
    